--- a/public/kbn_boxplot_violin_vis.html
+++ b/public/kbn_boxplot_violin_vis.html
@@ -1,4 +1,4 @@
-<div ng-controller="KbnBoxplotViolinVisController" class="metric-vis">
+<div ng-controller="KbnBoxplotViolinVisController" class="metric-vis" style="height:100%;width:100%">
   <div class="metric-container" ng-model="metrics">
     <svg role="boxplot1" class="boxplot"></svg>
   </div>
